--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RequestsActivity"></activity>
+        <activity android:name=".RequestsActivity"
+            android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".ProfileActivity" />
         <activity
             android:name=".FindFriendsActivity"
