--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,20 @@
         android:roundIcon="@mipmap/ma"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ImageViewerActivity"></activity>
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"></activity>
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".ChatActivity"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".ImageViewerActivity"></activity>
         <activity
             android:name=".RequestsActivity"
             android:parentActivityName=".MainActivity" />
